--- a/.travis.yml
+++ b/.travis.yml
@@ -1,115 +1,22 @@
-variables:
-  GIT_SSL_NO_VERIFY: "true"
-  GIT_STRATEGY: "fetch"
-  GIT_SUBMODULE_STRATEGY: "recursive"
-  GET_SOURCES_ATTEMPTS: "10"
+language: cpp
+dist: focal
+compiler: gcc
+os: linux
+sudo: true
+env:
+    - BUILD_TYPE=Debug
 
-
-before_install:  
-  - sudo apt-get -y install -q gcc gcc-c++ gcc-gfortran openblas openblas-devel lapack lapack-devel
-                      mpich mpich-devel openmpi openmpi-devel hdf5 hdf5-devel git make cmake
-                      python python3 redhat-rpm-config findutils which procps-ng coreutils
-  - . ~/.bash_profile
-  - uname -a
-  - lscpu
-  - free -h
-  - gfortran --version
-  - gcc --version
-  - g++ --version
-  - python3 --version
-  - git --version
-  - cmake --version
-
-coverage:
-  image: fedora:29
-  tags:
-    - parallel
-  except:
-    - schedules
-  script:
-    - sudo apt-get -y install -q gcovr
-    - module load mpi/mpich-x86_64
-    - mpirun --version
-    - alternatives --install /usr/bin/python python /usr/bin/python3 1
-    - alternatives --install /usr/bin/pip pip /usr/bin/pip3 1
-    - pip install -q codecov
-    - python setup --mpi --blas=none --lapack=none --explicit-libs="-lopenblaso -llapack" --type=release --coverage
-                   -DENABLE_PDE=ON
-    - cd build
-    - make -j 4
-    - export DALTON_LAUNCHER="mpirun -n 4"
-    - export OMP_NUM_THREADS=1
-    - ctest --output-on-failure -L dalton -LE "serial|long|verylong"
-    - export DALTON_LAUNCHER=""
-    - export OMP_NUM_THREADS=4
-    - ctest --output-on-failure -L serial -LE "long|verylong"
-    - ctest -D ExperimentalCoverage
-    - bash <(curl -s https://codecov.io/bash) -t 69d70b17-576f-459e-8f6c-409607c9f06b
-  interruptible: true
-
-intel:
-  image: fedora:32
-  variables:
-    DALTON_LAUNCHER: ""
-    OMP_NUM_THREADS: "1"
-  except:
-    - schedules
-  allow_failure: true
-  before_script:
-    
-    - sudo apt-get -y  install -q gcc gcc-c++ gcc-gfortran git make cmake python python3
-                        redhat-rpm-config findutils which procps-ng coreutils
-    - mv maintenance/oneAPI.repo /etc/apt-get.repos.d
-    - sudo apt-get  -y install intel-oneapi-compiler-fortran intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic intel-oneapi-mkl
-    - set +e
-    - . /opt/intel/oneapi/setvars.sh
-    - set -e
-    - uname -a
-    - lscpu
-    - free -h
-    - ifort --version
-    - icc --version
-    - icpc --version
-    - python3 --version
-    - git --version
-    - cmake --version
-  script:
-    - python setup --fc=ifort --cc=icc --cxx=icpc --mkl=sequential --type=release
-    - cd build
-    - make
-    - ctest --output-on-failure -L essential
-  interruptible: true
-
-intel-mpi:
-  image: fedora:32
-  variables:
-    DALTON_LAUNCHER: "mpirun -n 3"
-    OMP_NUM_THREADS: "1"
-  except:
-    - schedules
-  allow_failure: true
-  before_script:
-    
-    - sudo apt-get -y  install -q gcc gcc-c++ gcc-gfortran git make cmake python python3
-                        redhat-rpm-config findutils which procps-ng coreutils
-    - mv maintenance/oneAPI.repo /etc/apt-get.repos.d
-    - sudo apt-get -y install intel-oneapi-compiler-fortran intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic intel-oneapi-mkl intel-oneapi-mpi intel-oneapi-mpi-devel
-    - set +e
-    - . /opt/intel/oneapi/setvars.sh
-    - set -e
-    - uname -a
-    - lscpu
-    - free -h
-    - ifort --version
-    - icc --version
-    - icpc --version
-    - mpirun --version
-    - python3 --version
-    - git --version
-    - cmake --version
-  script:
-    - python setup --fc=mpiifort --cc=mpiicc --cxx=mpiicpc --mkl=sequential --type=release
-    - cd build
-    - make
-    - ctest --output-on-failure -L essential
-  interruptible: true
+# default gcc for Ubuntu Focal is v9, upgraded to v10 here
+# It increases build time by ~1 min, uncomment if needed.
+addons:
+       apt:
+             sources:
+                 - sourceline: “ppa:ubuntu-toolchain-r/test”
+             packages:
+                 - gcc-10
+                 - g++-10
+#install:
+# /usr/bin/gcc points to an older compiler on Linux.
+- if [ "$CXX" = "g++" ]; then export CXX="g++-10" CC="gcc-10"; fi
+script: 
+  - ./build.sh
