--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ os: linux
 sudo: true
 env:
     - BUILD_TYPE=Debug
-
-# default gcc for Ubuntu Focal is v9, upgraded to v10 here
-# It increases build time by ~1 min, uncomment if needed.
 addons:
        apt:
              sources:
@@ -15,8 +12,8 @@ addons:
              packages:
                  - gcc-10
                  - g++-10
-#install:
-# /usr/bin/gcc points to an older compiler on Linux.
+install:
+  
 - if [ "$CXX" = "g++" ]; then export CXX="g++-10" CC="gcc-10"; fi
 script: 
   - ./build.sh
