--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,21 @@
 version: 2
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - dev
+
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
+
+
+
+# version: 2
+# python:
+#   install:
+#     - method: pip
+#       path: .
+#       extra_requirements:
+#         - dev
