--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,9 +4,15 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "3.7"
 
-# Build documentation in the docs/ directory with Sphinx
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - dev
+
 sphinx:
   configuration: docs/conf.py
 
