--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,7 @@ build:
 python:
   install:
     - method: pip
-      path: .
+      path: doc
       extra_requirements:
         - dev
 
@@ -17,11 +17,3 @@ sphinx:
   configuration: docs/conf.py
 
 
-
-# version: 2
-# python:
-#   install:
-#     - method: pip
-#       path: .
-#       extra_requirements:
-#         - dev
