--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,19 +1,8 @@
 version: 2
-
-# Set the version of Python and other tools you might need
 build:
-  os: ubuntu-22.04
+  os: ubuntu-20.04
   tools:
-    python: "3.11"
-
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - dev
-
-sphinx:
-  configuration: docs/conf.py
-
-
+    python: mambaforge-4.10
+conda:
+  environment: doc/environment.yml
+formats: all
